--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -32,7 +32,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Code verifikasi sudah di kirim ke nomor"
+            android:text="Kode verifikasi sudah di kirim ke nomor"
             android:layout_gravity="center"
             android:textAlignment="center"
             android:layout_marginTop="50dp"
