--- a/app/src/main/res/layout/activity_data_diri_two.xml
+++ b/app/src/main/res/layout/activity_data_diri_two.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".user.DataDiriTwo"
+    tools:context=".common.DataDiriTwo"
     android:padding="30dp"
     android:background="@color/white">
 
