--- a/app/src/main/res/layout/fragment_account_info.xml
+++ b/app/src/main/res/layout/fragment_account_info.xml
@@ -14,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+
             android:background="@drawable/bg_rekap"
             android:orientation="vertical"
             android:padding="30dp">
@@ -85,6 +85,39 @@
 
                 </androidx.cardview.widget.CardView>
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_margin="15dp"
+                    android:backgroundTint="@color/white"
+                    android:elevation="8dp"
+                    app:cardCornerRadius="10dp">
+
+                    <LinearLayout
+                        android:layout_gravity="center"
+                        android:id="@+id/change_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:paddingTop="20dp"
+                        android:paddingLeft="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="20dp">
+
+                        <TextView
+                            style="@style/text_style"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Ubah Password"
+                            android:textSize="18sp"
+                            app:drawableEndCompat="@drawable/ic_arrow_right_small" /> />
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -119,9 +152,9 @@
                                 style="@style/text_style"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:drawableEnd="@drawable/ic_arrow_right_small"
                                 android:text="Nama"
-                                android:textSize="18dp" />
+                                android:textSize="18sp"
+                                app:drawableEndCompat="@drawable/ic_arrow_right_small" />
 
                         </LinearLayout>
 
@@ -145,9 +178,9 @@
                                 style="@style/text_style"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:drawableEnd="@drawable/ic_arrow_right_small"
                                 android:text="Tanggal Lahir"
-                                android:textSize="18dp" />
+                                android:textSize="18sp"
+                                app:drawableEndCompat="@drawable/ic_arrow_right_small" />
 
                         </LinearLayout>
 
