--- a/app/src/main/res/layout/activity_email_verification.xml
+++ b/app/src/main/res/layout/activity_email_verification.xml
@@ -1,95 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".common.EmailVerificationActivity"
-    android:padding="30dp"
-    android:background="@color/white">
+    tools:context=".common.EmailVerificationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_marginTop="40dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email"
-            android:textSize="80dp"
-            android:textColor="@color/black"
-            android:textAllCaps="true"
-            android:layout_gravity="center"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Verifikasi"
-            android:textSize="24sp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Link verifikasi sudah di kirim ke email anda"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:layout_marginTop="50dp"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cara Verifikasi:\n1. Buka Web/Aplikasi Gmail pada smartphone anda\n2. Pada menu inbox lihat email dari absensiinur\n3. Klik link pada email tersebut untuk memverifikasi\n4. Setelah berhasil diverifikasi login kembali menggunakan email yg sudah di daftarkan sebelumnya"
-            android:layout_gravity="center"
-            android:textSize="12sp"
-            android:textAlignment="center"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:id="@+id/getour_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="20dp"
-            android:padding="5dp">
+            android:layout_height="match_parent">
 
-            <ProgressBar
-                android:id="@+id/progresbar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:visibility="invisible" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/icon_done"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/avd_done"
-                app:tint="@color/purple_500" />
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textSize="80dp"
+                    android:textColor="@color/black"
+                    android:textAllCaps="true"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Verifikasi"
+                    android:textSize="24sp"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Link verifikasi sudah di kirim ke email anda"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:layout_marginTop="50dp"
+                    android:textColor="@color/black"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cara Verifikasi:\n1. Buka Web/Aplikasi Gmail pada smartphone anda\n2. Pada menu inbox lihat email dari absensiinur\n3. Klik link pada email tersebut untuk memverifikasi\n4. Setelah berhasil diverifikasi login kembali menggunakan email yg sudah di daftarkan sebelumnya"
+                    android:layout_gravity="center"
+                    android:textSize="12sp"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/getour_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:padding="5dp">
+
+                    <ProgressBar
+                        android:id="@+id/progresbar"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:visibility="invisible" />
+
+                    <ImageView
+                        android:id="@+id/icon_done"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/avd_done"
+                        app:tint="@color/purple_500" />
+
+                </RelativeLayout>
+
+                <Button
+                    android:id="@+id/resend_emailverif"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center"
+                    android:text="Kirim ulang verifikasi"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/black"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="40dp"
+                android:gravity="bottom"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/back_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="40dp"
+                    android:text="Kembali Ke login"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/black"/>
+
+            </LinearLayout>
         </RelativeLayout>
-
-        <Button
-            android:id="@+id/back_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:text="Kembali Ke login"
-            android:background="@android:color/transparent"
-            android:textColor="@color/black"/>
-
     </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
