--- a/app/src/main/res/layout/activity_detail_pegawai.xml
+++ b/app/src/main/res/layout/activity_detail_pegawai.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".admin.datapegawai.DetailPegawai">
 
-    <include layout="@layout/android_toolbar"/>
+    <include layout="@layout/android_toolbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -90,118 +90,205 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:backgroundTint="@color/white"
-            android:elevation="8dp"
-            app:cardCornerRadius="10dp">
 
-            <ScrollView
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:backgroundTint="@color/white"
+                android:elevation="8dp"
+                app:cardCornerRadius="10dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:padding="15dp">
+                    android:orientation="vertical">
 
-                    <TextView
+
+                    <LinearLayout
+                        android:id="@+id/layout_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Email" />
+                        android:background="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:padding="15dp"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Email" />
 
-                    <TextView
-                        android:id="@+id/id_email"
-                        style="@style/text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Email" />
+                        <TextView
+                            android:id="@+id/id_email"
+                            style="@style/text_style"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:text="Email" />
+                </LinearLayout>
 
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tanggal Lahir" />
+                <LinearLayout
+                    android:id="@+id/layout_ttl"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="15dp"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/id_ttl"
-                        style="@style/text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Tanggal Lahir" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Tanggal Lahir" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:text="Jenis Kelamin" />
+                        <TextView
+                            android:id="@+id/id_ttl"
+                            style="@style/text_style"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:text="Tanggal Lahir" />
+                </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/id_gender"
-                        style="@style/text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Jenis Kelamin" />
+                <LinearLayout
+                    android:id="@+id/layout_gender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="15dp"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:text="Jabatan" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Jenis Kelamin" />
 
-                    <TextView
-                        android:id="@+id/id_jabatan"
-                        style="@style/text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Jabatan" />
+                        <TextView
+                            android:id="@+id/id_gender"
+                            style="@style/text_style"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:text="Jenis Kelamin" />
+                </LinearLayout>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:text="Alamat" />
+                <LinearLayout
+                    android:id="@+id/layout_jabatan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="15dp"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/id_alamat"
-                        style="@style/text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Alamat" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Jabatan" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:text="No Handphone" />
+                        <TextView
+                            android:id="@+id/id_jabatan"
+                            style="@style/text_style"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:text="Jabatan" />
+                </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/id_phone"
-                        style="@style/text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="No Handphone" />
+                <LinearLayout
+                    android:id="@+id/layout_alamat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="15dp"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Status" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
 
-                    <TextView
-                        android:id="@+id/id_status"
-                        style="@style/text_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Status" />
+                            android:text="Alamat" />
+
+                        <TextView
+                            android:id="@+id/id_alamat"
+                            style="@style/text_style"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:text="Alamat" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layout_nohp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="15dp"
+                    android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="No Handphone" />
+
+                            <TextView
+                                android:id="@+id/id_phone"
+                                style="@style/text_style"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="18sp"
+                                android:text="No Handphone" />
+                </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layout_status"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?android:attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:padding="15dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Status" />
+
+                            <TextView
+                                android:id="@+id/id_status"
+                                style="@style/text_style"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="18sp"
+                                android:text="Status"
+                                app:drawableEndCompat="@drawable/ic_arrow_right_small" />
+                        </LinearLayout>
 
                 </LinearLayout>
-            </ScrollView>
-        </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 </RelativeLayout>
