--- a/app/src/main/res/layout/fragment_account_info.xml
+++ b/app/src/main/res/layout/fragment_account_info.xml
@@ -56,7 +56,9 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
                     android:backgroundTint="@color/white"
                     android:elevation="8dp"
                     app:cardCornerRadius="10dp">
@@ -88,7 +90,9 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
-                    android:layout_margin="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
                     android:backgroundTint="@color/white"
                     android:elevation="8dp"
                     app:cardCornerRadius="10dp">
@@ -122,7 +126,9 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
                     android:backgroundTint="@color/white"
                     android:elevation="8dp"
                     app:cardCornerRadius="10dp">
