--- a/app/src/main/res/layout/fragment_settings_location.xml
+++ b/app/src/main/res/layout/fragment_settings_location.xml
@@ -19,7 +19,9 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
                 android:elevation="8dp"
-                android:layout_margin="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 app:cardCornerRadius="10dp">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -77,7 +79,6 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginBottom="20dp"
                 app:cardCornerRadius="10dp">
                 <LinearLayout
                     android:layout_width="match_parent"
