--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -74,6 +74,14 @@
         <item name="android:fontFamily">@font/mulish_black</item>
     </style>
 
+    <style name="MyCustomButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/selector_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+    </style>
+
     <style name="fabtheme" parent="Widget.Design.FloatingActionButton">
         <item name="colorOnSecondary">@color/white</item>
     </style>
