--- a/app/src/main/res/layout/activity_detail_absen.xml
+++ b/app/src/main/res/layout/activity_detail_absen.xml
@@ -68,7 +68,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
-            android:layout_margin="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:backgroundTint="@color/purple_500"
             app:cardElevation="8dp">
             <LinearLayout
@@ -181,7 +183,9 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
             android:elevation="8dp"
-            android:layout_margin="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             app:cardCornerRadius="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -192,11 +196,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Waktu absen"
+                    android:text="Waktu Absen"
                     android:textSize="18dp" />
 
                 <TextView
-                    android:id="@+id/jam_absen"
+                    android:id="@+id/jam_masuk"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
@@ -217,6 +221,21 @@
                     android:padding="5dp"
                     android:textColor="@color/black"
                     android:textSize="20dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="Lokasi Absen"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:id="@+id/lokasi_absen"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
