Update v1.2.8 improve algorithm

--- a/app/src/main/res/layout/activity_tambah_izin.xml
+++ b/app/src/main/res/layout/activity_tambah_izin.xml
@@ -34,7 +34,7 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Tanngal izin"
+                        android:hint="Tangal izin"
                         android:textColorHint="@color/colorPrimary"
                         app:endIconMode="clear_text"
                         app:boxStrokeErrorColor="@color/red"
@@ -45,6 +45,7 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:focusableInTouchMode="false"
                             android:inputType="textCapSentences"
                             android:textColor="@color/colorPrimary" />
 
