--- a/app/src/main/res/layout/activity_detail_absen.xml
+++ b/app/src/main/res/layout/activity_detail_absen.xml
@@ -236,6 +236,21 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
+                            android:text="Titik Lokasi Absensi"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:id="@+id/titik_lokasi"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="5dp"
+                            android:textColor="@color/black"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
                             android:text="Waktu Absen"
                             android:textSize="15sp" />
 
