--- a/app/src/main/res/layout/fragment_absen.xml
+++ b/app/src/main/res/layout/fragment_absen.xml
@@ -179,20 +179,22 @@
 
                             <Button
                                 android:id="@+id/absen_luar_kantor"
-                                android:layout_width="120dp"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_marginRight="50dp"
                                 android:text="Luar"
-                                android:textSize="15sp" />
+                                android:textSize="17sp" />
 
                             <Button
                                 android:id="@+id/absen_kantor"
-                                android:layout_width="120dp"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:text="Kantor"
-                                android:textSize="15sp" />
+                                android:textSize="17sp" />
 
                         </LinearLayout>
 
