--- a/app/src/main/res/layout/activity_detail_pegawai.xml
+++ b/app/src/main/res/layout/activity_detail_pegawai.xml
@@ -23,7 +23,8 @@
             android:padding="10dp">
 
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
@@ -68,11 +69,17 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
             <RelativeLayout
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
                 android:orientation="vertical">
 
                 <ImageView
@@ -85,9 +92,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:layout_margin="11dp"
+                    android:layout_marginStart="11dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginEnd="11dp"
+                    android:layout_marginBottom="11dp"
                     android:background="@drawable/ic_account" />
             </RelativeLayout>
+            </LinearLayout>
         </LinearLayout>
 
 
