--- a/app/src/main/res/layout/item_pegawai.xml
+++ b/app/src/main/res/layout/item_pegawai.xml
@@ -24,6 +24,7 @@
         android:paddingBottom="3dp"
         android:layout_marginStart="10dp"
         android:background="@color/white">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_marginStart="5dp"
@@ -38,7 +39,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:orientation="vertical"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
@@ -59,14 +61,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:id="@+id/sNama"
-                android:text="nama"
+                android:text="Nama"
                 android:textSize="17dp"
                 style="@style/text_style"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:textSize="15dp"
                 android:text="Jabatan"
@@ -81,24 +83,21 @@
                 android:textSize="17dp"
                 style="@style/text_style"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"
-                android:textSize="15dp"
                 android:text="Status"
-                style="@style/text_style_title"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:id="@+id/sStatus"
-                android:text="Status"
-                android:textSize="17dp"
-                style="@style/text_style"/>
-
+                android:gravity="center"
+                android:textSize="17sp"
+                android:textColor="@color/black"
+                android:id="@+id/sStatus"/>
         </LinearLayout>
 
     </LinearLayout>
