Update v1.3.9 new maps location picker

--- a/app/src/main/res/menu/menu_rekap.xml
+++ b/app/src/main/res/menu/menu_rekap.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="Data Pengajuan"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/print_absen"
+        android:orderInCategory="100"
+        android:title="Cetak Absensi"
+        app:showAsAction="never" />
 </menu>
