Update v1.4.3 new ui for user, and fix some bug

--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -5,5 +5,5 @@
         android:id="@+id/delete_account"
         android:title="Hapus akun"
         android:icon="@drawable/ic_baseline_delete_forever_24"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
 </menu>
