--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="bluesea">#0FFFF7</color>
     <color name="red">#F44336</color>
     <color name="colorPrimary">#04223A</color>
+    <color name="coklat">#40230E</color>
     <color name="shot_black">#52000000</color>
     <color name="green">#11D118</color>
     <color name="title_nama">#9AFFFFFF</color>
