--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,6 +45,15 @@
 <!--        <item name="fontFamily">@font/mulish_black</item>-->
     </style>
 
+    <style name="progress_dialog_theme" parent="ThemeOverlay.AppCompat.Dialog">
+        <item name="colorAccent">@color/colorPrimary</item>                   <!--header background-->
+        <!--<item name="android:windowBackground">@color/colorPrimary</item>-->      <!--calendar background-->
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+         <item name="android:textColorSecondary">@color/colorPrimary</item>   days of the week
+        <!--        <item name="fontFamily">@font/mulish_black</item>-->
+    </style>
+
     <style name="MyDatePicker">
         <!-- Text color -->
         <item name="android:textColorPrimary">@color/black</item>
